# blitz

./: .dockerignore  .env.example  .gitignore  .gitmodules  Cargo.toml  Dockerfile  Makefile  README.md  go.mod  go.sum  package.json  tsconfig.json
.github/workflows/: release-operator.yml
contracts/nitro-finality-gadget/: Cargo.toml
contracts/nitro-finality-gadget/.cargo/: config.toml
contracts/nitro-finality-gadget/schema/: nitro-finality-gadget.json
contracts/nitro-finality-gadget/schema/raw/: query.json
contracts/nitro-finality-gadget/src/: contract.rs  msg.rs
contracts/nitro-finality-gadget/src/exec/: admin.rs  finality.rs
contracts/nitro-finality-gadget/src/state/: config.rs  finality.rs
contracts/nitro-finality-gadget/tests/: integration.rs
contracts/orbit-finality-gadget/: Cargo.toml
contracts/orbit-finality-gadget/src/: finality.rs
datagen/: go.mod  go.sum
docker/: .env.example  docker-compose.yml
docker/configs/: finality-gadget-operator.yaml  fpd.conf
docker/eotsd/: eotsd.conf
docs/: fp.md  registrator.md  rpc.md
finality-gadget/client/eotsmanager/: eotsmanager.go
finality-gadget/configs/: finality-gadget-operator.yaml  finality-gadget-signer.yaml
finality-gadget/metrics/: config.go  fp_collectors.go
finality-gadget/operator/: block_handler.go  services.go
finality-gadget/rpc/: rpc.go
finality-gadget/sdk/: README.md
finality-gadget/signer/: services.go
finality-gadget/testutils/: mock_btc_client.go  random.go
scripts/: boot-devnet.sh  build-contract.sh  deploy-contract.sh
ts-scripts/: deploy_and_call.ts  reset.ts
(+90 files in other folders)
