[package]
name = "nitro-finality-gadget"
edition.workspace = true
version.workspace = true
license.workspace = true
repository.workspace = true
authors = ["Babylon Labs, Ltd. <admin@babylonlabs.io>", "Snapchain Inc. <info@snapchain.dev>"]
publish.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib", "rlib"]
doctest = false

[[bin]]
name = "nitro-finality-gadget-schema"
path = "src/bin/schema.rs"
test = false

[features]
library = []

[dependencies]
babylon-apis     = { workspace = true }
babylon-merkle   = { workspace = true }
babylon-bindings = { workspace = true }
cosmwasm-schema  = { workspace = true }
cosmwasm-std     = { workspace = true }
cw-controllers   = { workspace = true }
cw-storage-plus  = { workspace = true }
cw-utils         = { workspace = true }
eots             = { workspace = true }
hex              = { workspace = true }
k256             = { workspace = true } 
thiserror        = { workspace = true }
anybuf           = { workspace = true }

[dev-dependencies]
cosmwasm-vm       = { workspace = true }
test-utils        = { workspace = true }
